# UNITBV-IESC-courses

./: .gitattributes  .gitignore  .gitmodules  README.md
.github/workflows/: close_pr.yml  main.yml
1st_year/1st_Semester/ALGAD/: README.md
1st_year/1st_Semester/AnMate/: README.md  SemI.tex
1st_year/1st_Semester/Comunicare/: README.md
1st_year/1st_Semester/Engleza/: README.md
1st_year/1st_Semester/InfoAp/: README.md
1st_year/1st_semester/DPPD/: README.md
1st_year/1st_semester/Engleza/: README.md
1st_year/1st_semester/ICTI/: README.md
1st_year/1st_semester/InfoAp/: README.md
1st_year/1st_semester/PCLP1/: README.md
1st_year/2nd_Semester/Electro-Tehnica/: README.md
1st_year/2nd_Semester/Engleza/: README.md
1st_year/2nd_Semester/Matematici_Speciale/: README.md
1st_year/2nd_Semester/PCLP2/: README.md
1st_year/2nd_Semester/TPSM/: README.md
1st_year/2nd_semester/DPPD/: Autoeducatie si educatia permanenta2.odp  README.md
1st_year/2nd_semester/ET/: README.md
1st_year/2nd_semester/Engleza/: README.md
1st_year/2nd_semester/Fizica/: README.md
1st_year/2nd_semester/PCLP2/: README.md
2nd_year/1st_Semester/Engleza/: Sisteme electronice integrate și comunicații avansate.docx  (+2 more)
3rd_year/1st_semester/: .gitignore
3rd_year/1st_semester/IA/04_L_2025_10_17/lab/: Cargo.toml
3rd_year/1st_semester/IA/04_L_2025_10_17/lab/src/: lib.rs
3rd_year/2nd_semester/: .gitignore
3rd_year/2nd_semester/LFT/ZZ_Homework/lab1_lft/: Cargo.toml  lab1.org
3rd_year/2nd_semester/LFT/ZZ_Homework/lab1_lft/src_wrong/: ex4_a.rs  ex4_b.rs  ex4_c.rs  ex4_d.rs
(+1278 files in other folders)
