[package]
name = "lab1_lft"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ex1"
path = "src/bin/ex1.rs"

[[bin]]
name = "ex2"
path = "src/bin/ex2.rs"

[[bin]]
name = "ex3"
path = "src/bin/ex3.rs"

[[bin]]
name = "ex5"
path = "src/bin/ex5.rs"

[[bin]]
name = "ex6"
path = "src/bin/ex6.rs"

[dependencies]
rand = "0.8.0"
